add_executable(AdSynth_Test
param_test.cpp)
add_executable(AdSynth_Resynthsis_Test
resynthsis_test.cpp)

set_property(TARGET AdSynth_Test PROPERTY CXX_STANDARD 20)
set_property(TARGET AdSynth_Resynthsis_Test PROPERTY CXX_STANDARD 20)

target_link_libraries(AdSynth_Test PRIVATE AdSynthLib)
target_link_libraries(AdSynth_Resynthsis_Test PRIVATE AdSynthLib)